# cursor-ai

./: README.md  main.py
FastAPI/Platzi/: pyproject.toml  schemas.py  settings.py
